--- a/index.html
+++ b/index.html
@@ -9,55 +9,57 @@
 <body>
  <form action="" enctype="multipart/form-data" method="put">
  <h2>Personal Details</h2>
- <p><b>Fill the form:</b></p>
- <img width="250px" src="pics.jpg" alt=""><br><br>
+ <p><b>Please fill the Details:</b></p>
+ <img width="250px" src="shirt.png" alt=""><br><br>
+ <h4>Perks of buying from us are:</h4>
+ <ul>
+  <li>Quick delievry</li>
+  <li>Premium Product</li>
+  <li>Affordable rates</li>
+</ul>
  <label for="tagline">Enter Name:</label><br>
   <input type="text" name="tagline" id="tagline"><br><br>
- <label for="post">Choose post:</label><br>
- <input type="radio" id="Chairperson" name="post" value="Chairperson">
-  <label for="Chairperson">Chairperson</label><br>
- <input type="radio" id="Treasurer" name="post" value="Treasurer">
-  <label for="Treasurer">Treasurer</label><br>
- <input type="radio" id="PRO" name="post" value="PRO">
-  <label for="PRO">PRO</label><br><br>
- <label for="class">Select class:</label><br>
- <select id="class" name="class">
-   <option value="D15A">D15A</option>
-   <option value="D15B">D15B</option>
-   <option value="D10A">D10A</option>
-   <option value="D10B">D10B</option>
+ <label for="tagline">Enter Product:</label><br>
+   <input type="text" name="tagline" id="tagline"><br><br>
+ <label for="type">Choose Type:</label><br>
+ <input type="radio" id="Full sleeves" name="type" value="Full sleeves">
+  <label for="Full sleeves">Full sleeves</label><br>
+ <input type="radio" id="sleeves" name="type" value="sleeves">
+  <label for="sleeves">sleeves</label><br>
+ <input type="radio" id="No sleeves" name="type" value="No sleeves">
+  <label for="No sleeves">No sleeves</label><br><br>
+ <label for="Color">Select Color:</label><br>
+ <select id="Color" name="Color">
+   <option value="Red">Red</option>
+   <option value="Blue">Blue</option>
+   <option value="Green">Green</option>
+   <option value="White">White</option>
+   <option value="Black">Black</option>
  </select><br><br>
- <label for="Semester">semester: </label><br>
- <select id="semester" name="semester">
-   <option value="3">3</option>
-   <option value="4">4</option>
-   <option value="5">5</option>
-   <option value="6">6</option>
+ <label for="Coupons">Any Coupons: </label><br>
+ <select id="Coupons" name="Coupons">
+   <option value="Diwali Offer">Diwali Offer</option>
+   <option value="20% Off">20% Off</option>
+   <option value="10% off">10% Off</option>
+   <option value="None">None</option>
  </select><br><br>
- <label for="fee">Membership fee: <strong>Rs.650/-</strong></label><br><br>
- <h4>Perks of Memberships are:</h4>
- <ul>
-     <li>Attend Workshops</li>
-     <li>Guidance from seniors</li>
-     <li>Chance to stand for Council Elections</li>
-     <li>Resume Building</li>
- </ul>
+ <label for="fee">Your total amount: <strong>Rs.650/-</strong></label><br><br>
  <p>Our official Website link:</p>
  <nav>
-    <a href="https://csiindia.org/">CSI</a> |
+    <a href="https://www.amazon.in/?&ext_vrnc=hi&tag=googhydrabk1-21&ref=pd_sl_nxqtetlae_e&adgrpid=60571832564&hvpone=&hvptwo=&hvadid=486387378181&hvpos=&hvnetw=g&hvrand=5429964627140638042&hvqmt=e&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9040246&hvtargid=kwd-296458789801&hydadcr=14452_2154371&gclid=Cj0KCQjwuaiXBhCCARIsAKZLt3nhbKNjdaT7Ann7pfmUoJ4R7vo4MiZ08aSAi2pOTAswtfesVsGO0BgaAjFFEALw_wcB">Amazon</a> |
 </nav>
  <label for="payment_options">Payment Options:</label><br>
  <input type="radio" id="cc" name="color" value="Credit/Debit Card">
- <label for="cc">Credit/Debit Card</label><br>
+  <label for="cc">Credit/Debit Card</label><br>
  <input type="radio" id="upi" name="color" value="UPI">
- <label for="upi">UPI</label><br>
+  <label for="upi">UPI</label><br>
  <input type="radio" id="crypto" name="color" value="Crypto">
- <label for="crypto">Crypto-Wallet</label><br><br>
+  <label for="crypto">Crypto-Wallet</label><br><br>
  <label for="address">Address:</label><br>
  <p>VESIT<br>
  Chembur,Mumbai</p>
  <button type="submit">Confirm</button>
  </form>
- <footer>Thank You</footer>
+ <footer>Thank You,Have a good day</footer>
 </body>
 </html>
