--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
  Chembur,Mumbai</p>
  <button type="submit">Confirm</button>
  </form>
- <footer>Thank You,Have a good day</footer>
+ <footer><i>Thanks You,Have a good day</i></footer>
 </body>
 </html>
