--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
+ <link href="styles.css" rel="stylesheet">
  <title>Membership FORM</title>
 </head>
-<body>
+<body style="background-color:#D4F6CC;">
  <form action="" enctype="multipart/form-data" method="put">
- <h2>Personal Details</h2>
+ <div class="head">
+ <h2>Details</h2>
  <p><b>Please fill the Details:</b></p>
- <img width="250px" src="shirt.png" alt=""><br><br>
+ <img class="logo" width="250px" src="shirt.png" alt=""><br><br>
+</div>
  <h4>Perks of buying from us are:</h4>
- <ul>
+ <ul class="hello">
   <li>Quick delievry</li>
   <li>Premium Product</li>
   <li>Affordable rates</li>
@@ -44,22 +49,26 @@
    <option value="None">None</option>
  </select><br><br>
  <label for="fee">Your total amount: <strong>Rs.650/-</strong></label><br><br>
- <p>Our official Website link:</p>
+ <span>Our official Website link:</span>
  <nav>
-    <a href="https://www.amazon.in/?&ext_vrnc=hi&tag=googhydrabk1-21&ref=pd_sl_nxqtetlae_e&adgrpid=60571832564&hvpone=&hvptwo=&hvadid=486387378181&hvpos=&hvnetw=g&hvrand=5429964627140638042&hvqmt=e&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9040246&hvtargid=kwd-296458789801&hydadcr=14452_2154371&gclid=Cj0KCQjwuaiXBhCCARIsAKZLt3nhbKNjdaT7Ann7pfmUoJ4R7vo4MiZ08aSAi2pOTAswtfesVsGO0BgaAjFFEALw_wcB">Amazon</a> |
+    <a href="https://www.amazon.in/?&ext_vrnc=hi&tag=googhydrabk1-21&ref=pd_sl_nxqtetlae_e&adgrpid=60571832564&hvpone=&hvptwo=&hvadid=486387378181&hvpos=&hvnetw=g&hvrand=5429964627140638042&hvqmt=e&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9040246&hvtargid=kwd-296458789801&hydadcr=14452_2154371&gclid=Cj0KCQjwuaiXBhCCARIsAKZLt3nhbKNjdaT7Ann7pfmUoJ4R7vo4MiZ08aSAi2pOTAswtfesVsGO0BgaAjFFEALw_wcB">Amazon </a> 
 </nav>
- <label for="payment_options">Payment Options:</label><br>
+ <br><label for="payment_options">Payment Options:</label><br>
  <input type="radio" id="cc" name="color" value="Credit/Debit Card">
   <label for="cc">Credit/Debit Card</label><br>
  <input type="radio" id="upi" name="color" value="UPI">
   <label for="upi">UPI</label><br>
  <input type="radio" id="crypto" name="color" value="Crypto">
   <label for="crypto">Crypto-Wallet</label><br><br>
- <label for="address">Address:</label><br>
+ <span>Address:</span>
  <p>VESIT<br>
  Chembur,Mumbai</p>
- <button type="submit">Confirm</button>
- </form>
- <footer><i>Thanks You,Have a good day</i></footer>
+ <div class="eg">
+  <hr>
+  <button class="btn" type="submit">Confirm</button>
+  </form>
+  <br><br>
+  <footer><i>Thanks You,Have a good day</i></footer>
+ </div>
 </body>
 </html>
